@startuml
'https://plantuml.com/class-diagram

skinparam monochrome true
skinparam shadowing false

title 5.1.21 As an Admin, I want to edit existing operation types, so that I can update or correct information about the procedure.

class Admin{

}




class User{
    +ID: long
    +Username: String
    +Role: String
    +Email: String
}

class OperationType{
    +ID:long
    +Name:String
    +Staff: Staff 
    +EstimatedDuration : Date

}



class SessionManager {
    +CreateSession(SessionToken token, Admin admin): Session
    +InvalidateSession(): void
}

class Session {
    +SessionID: string
    +Admin: Admin
    +CreatedAt: DateTime
    +ExpiresAt: DateTime
}
class IAMService {
    +Authenticate(IAMCredentials credentials): SessionToken
}



class SessionToken {
    +Token: string
    +Expiration: DateTime
    +IsValid(): bool
}

class OperationTypeController{
    +EditOperationType(OperationTypeDTO dto): OperationType
}

class OperationTypeService {
    +EditOperationType(OperationTypeDTO dto): OperationType

}
class OperationTypeRepository {
    +EditOperationType(OperationTypeDTO dto): OperationType

}


Admin-|>User
Admin --> SessionManager : uses
IAMService --> SessionToken : returns
SessionManager --> Session : creates
Admin --> IAMService : authenticates with
Admin --> OperationTypeController : inserts data into
OperationTypeController-->OperationTypeService: creates typeOperation
operations-->OperationTypeController:uses
OperationTypeService-->OperationTypeRepository: creates typeOperation
SessionToken --> Session : verifies

@enduml